# simulation-engine

./: .gitignore  CMakeLists.txt  README.md
examples/: limit_order_example.cpp  market_order_example.cpp
include/simulation_engine/: engine.cppm  market_data.cppm  market_state.cppm  order_placement.cppm  portfolio.cppm  probability_distributions.cppm  quote.cppm  run_params.cppm  simulation_engine.cppm  statistics.cppm  strategy_interface.cppm  template_instantiations.cppm  types.cppm
lib/: data_transform.py  fabrizio_data_add_symbol_id_col.py  fabrizio_data_extract_transform.py  fabrizio_data_multisymbol.py
lib/datetime/include/datetime/: datetime.cppm  datetime_date.cppm  datetime_datetime.cppm  datetime_duration.cppm  datetime_time.cppm  datetime_types.cppm
lib/datetime/py/: CMakeLists.txt  datetime_utils.py  datetime_utils_pybind.cpp
lib/datetime/src/: date.cpp  datetime.cpp  duration.cpp  time.cpp
src/: engine.cpp  market_data.cpp  portfolio.cpp  statistics.cpp  strategy_interface.cpp
